using UnityEngine;

public abstract class BaseMenu : MonoBehaviour
{
    public abstract void Show();
    public abstract void Hide();
}
